--- a/app/src/main/res/layout/cardview_mascota_perfil.xml
+++ b/app/src/main/res/layout/cardview_mascota_perfil.xml
@@ -4,37 +4,34 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardElevation="8dp"
     app:strokeColor="@color/stroke_color"
     app:strokeWidth="5dp"
-    android:layout_gravity="center"
     >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            app:strokeColor="@color/colorAccent"
-            app:strokeWidth="5dp"
             android:id="@+id/IvFoto"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:contentDescription="Foto de la persona"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            android:layout_margin="5dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_launcher_foreground"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="5dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-
             android:orientation="horizontal">
 
             <ImageButton
@@ -42,38 +39,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_nolike"
+                android:background="@drawable/ic_like"
                 android:elevation="8dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/TvLikes"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Prueba"
-                    android:textSize="20sp"
+                    android:textSize="14sp"
                     android:textStyle="italic" />
-
             </LinearLayout>
-
-
         </LinearLayout>
 
         <TextView
             android:id="@+id/TvNombre"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Nombre"
-            android:textSize="30sp"
-            android:layout_margin="15dp"
-            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            />
+            android:layout_marginLeft="10dp"
+            android:text="Nombre"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
